<?xml version="1.0"?>
<package format="3">
  <name>drone_circle</name>
  <version>0.0.2</version>
  <description>
    Controller to make the drone go to a position and fly in a circle
  </description>

  <maintainer email="you@todo.todo">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
