<?xml version="1.0"?>
<package format="3">
  <name>mobile_jacobian</name>
  <version>0.0.2</version>
  <description>
    Mobile-manipulator Jacobian controller hovering above target odometry poses
  </description>

  <maintainer email="you@todo.todo">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>