<?xml version="1.0"?>
<package format="3">
  <name>two_dof_arm</name>
  <version>0.0.0</version>
  <description>TODO: Package description goes here</description>
  <maintainer email="rola@mmmi.sdu.dk">rola</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
